# tcheater

./: AGENTS.md  Cargo.toml  LICENSE  README.md  config.toml  test_parse.rs
.github/workflows/: ci.yml
src/: app.rs  auth.rs  config.rs  firestore.rs  main.rs  pbs.rs  projects.rs  time.rs  timeline_widget.rs  verification_test.rs  widgets.rs
