[package]
name = "tcheater"
version = "0.1.0"
authors = ["Marcel Pavlíček <pavlicek.marcel@gmail.com>"]
license = "MIT"
edition = "2021"

[dependencies]
ratatui = "0.29.0"
color-eyre = "0.6.3"
chrono = "0.4.40"
firestore = "0.47.0"
futures = "0.3.31"
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0.218", features = ["derive"] }
toml = "0.9.10"
tui-input = "0.14.0"
directories = "6.0.0"
rustls = "0.23.35"
reqwest = { version = "0.12", features = ["cookies"] }
libxml = "0.3.8"
